--- a/board.ui
+++ b/board.ui
@@ -6,22 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>315</width>
-    <height>479</height>
+    <width>300</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>300</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QWidget" name="widget" native="true">
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(242, 237, 208);</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
  </widget>
  <resources/>
  <connections/>
